# ccapi

./: .dockerignore  .gitignore  ccapi-0.2.1-cp311-cp311-linux_x86_64.whl
binding/: CMakeLists.txt  Dockerfile  swig_interface.i.in  user_specified_cmake_include.cmake
binding/python/: CMakeLists.txt
docker_test/: CMakeLists.txt  Dockerfile  main.cpp
example/: CMakeLists.txt  user_specified_cmake_include_examples.cmake
example/src/market_data_simple_subscription/: main.cpp
include/ccapi_cpp/: ccapi_macro.h
include/ccapi_cpp/service/: ccapi_execution_management_service_gateio_base.h  ccapi_execution_management_service_huobi.h  ccapi_market_data_service.h  ccapi_market_data_service_gateio_base.h  ccapi_market_data_service_mexc.h
